--- a/django/cabinets.html
+++ b/django/cabinets.html
@@ -55,6 +55,7 @@
             <div class="cb-add-form-d">
                 <label>机柜规格：</label>
                 <input type="text" name="cb-size" class="easyui-validatebox" data-options="required:true">
+                <a class="cb-size-tip" href="javascript:void(0)"><img src="static/easyui/themes/icons/help.png"></a>
             </div>
             <div class="cb-add-form-d">
                 <label>到期日期：</label>
@@ -93,6 +94,7 @@
             <div class="cb-update-form-d">
                 <label>机柜规格：</label>
                 <input id="cb-size" type="text" name="cb-size" class="easyui-validatebox" data-options="required:true">
+                <a class="cb-size-tip" href="javascript:void(0)"><img src="static/easyui/themes/icons/help.png"></a>
             </div>
             <div class="cb-update-form-d">
                 <label>到期日期：</label>
