--- a/django/left.html
+++ b/django/left.html
@@ -15,7 +15,7 @@
 </div>
 <div class="easyui-accordion" style="width: 250px;top: 30px;overflow: hidden;padding: 0px; margin: 0px">
     <div title="资源管理">
-        <a target="main" target="main" href="/resource/idc/" class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
+        <a target="main" target="main" href="idcs.html" class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
             <span class="l-btn-text">机房信息</span>
             <span class="m-btn-line"></span>
@@ -25,12 +25,12 @@
             <span class="l-btn-text">机柜信息</span>
             <span class="m-btn-line"></span>
         </a>
-        <a target="main" href="/resource/servers/"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
+        <a target="main" href="servers.html"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
             <span class="l-btn-text">服务器信息</span>
             <span class="m-btn-line"></span>
         </a>
-        <a target="main" href="/resource/ipaddr/"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
+        <a target="main" href="ipaddr.html"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
             <span class="l-btn-text">IP池</span>
             <span class="m-btn-line"></span>
