--- a/django/side.html
+++ b/django/side.html
@@ -6,7 +6,7 @@
 </head>
 <body class="navbar">
 <div class="navbarlogo">
-    <img src=/static/images/logo.jpg>
+    <img src=/static/images/logo.png width="241px" height="106px">
 </div>
 
 <div class="navsection">
