--- a/django/projects.html
+++ b/django/projects.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="static/easyui/themes/default/easyui.css">
+    <link rel="stylesheet" type="text/css" href="static/easyui/themes/icon.css">
+    <link rel="stylesheet" href="static/project.css"/>
+    <script type="text/javascript" src="static/jquery-2-1-1.js"></script>
+    <script type="text/javascript" src="static/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="static/django_post.js"></script>
+    <script type="text/javascript" src="static/project.js"></script>
     <title></title>
 </head>
 <body>
-projects
-
+<div id="pro-main" style="height: 650px"></div>
 </body>
 </html>
