--- a/django/servers.html
+++ b/django/servers.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/servers.css"/>
     <script type="text/javascript" src="static/jquery-2-1-1.js"></script>
     <script type="text/javascript" src="static/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="static/django_post.js"></script>
     <script type="text/javascript" src="static/servers.js"></script>
     <title></title>
 </head>
