--- a/django/ipaddr.html
+++ b/django/ipaddr.html
@@ -12,7 +12,7 @@
     <title></title>
 </head>
 <body>
-<div id="ip-div-main" class="easyui-tabs" style="position:absolute;width: 800px; height: 650px;top:50%; left: 50%;margin-top: -325px;margin-left: -400px;">
+<div id="ip-div-main" class="easyui-tabs" style="position:absolute;width: 800px; height: 650px">
     <div title="私网" data-options="iconCls:'icon-filter'">
         <div id='ip-private-table' style="height: 650px"></div>
     </div>
