--- a/django/left.html
+++ b/django/left.html
@@ -51,7 +51,7 @@
     <div title="任务管理">
         <a target="main" href="#"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
-            <span class="l-btn-text">任务列表</span>
+            <span class="l-btn-text">版本发布</span>
             <span class="m-btn-line"></span>
         </a>
         <a target="main" href="#"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
