--- a/django/left.html
+++ b/django/left.html
@@ -15,7 +15,7 @@
 </div>
 <div class="easyui-accordion" style="width: 250px;top: 30px;overflow: hidden;padding: 0px; margin: 0px">
     <div title="资源管理">
-        <a target="main" target="main" href="idcs.html" class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
+        <a target="main" href="idcs.html" class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
             <span class="l-btn-text">机房信息</span>
             <span class="m-btn-line"></span>
@@ -61,14 +61,14 @@
         </a>
     </div>
     <div title="常用功能">
-        <a target="main" href="#"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
+        <a target="main" href="exc-command.html"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
-            <span class="l-btn-text">JAVA日志查看</span>
+            <span class="l-btn-text">执行指令</span>
             <span class="m-btn-line"></span>
         </a>
         <a target="main" href="#"class="l-width-cl l-btn l-btn-small l-btn-plain m-btn m-btn-small">
             <span class="l-btn-left" style="margin-top: 0px;"></span>
-            <span class="l-btn-text">MySQL-Binlog分析</span>
+            <span class="l-btn-text">文件同步</span>
             <span class="m-btn-line"></span>
         </a>
     </div>
