--- a/django/servers.html
+++ b/django/servers.html
@@ -66,6 +66,10 @@
                 <input type="text" id='svr-add-os' class="easyui-validatebox" name='svr-add-os' data-options="valueField:'id', textField:'name', required:true">
             </div>
             <div class="svr-add-form-d">
+                <label>计算机名：</label>
+                <input type="text" id='svr-add-hostname' class="easyui-validatebox" name='svr-add-hostname' data-options="valueField:'id', textField:'name', required:true">
+            </div>
+            <div class="svr-add-form-d">
                 <label>所在机房：</label>
                 <input id='svr-add-idc' class="easyui-combobox" name='svr-add-idc' style="height: 20px" data-options="valueField:'id', textField:'name', required:true">
             </div>
@@ -123,6 +127,10 @@
             <div class="svr-add-form-d">
                 <label>操作系统：</label>
                 <input type="text" id='svr-update-os' class="easyui-validatebox" name='svr-update-os' data-options="valueField:'id', textField:'name', required:true">
+            </div>
+            <div class="svr-add-form-d">
+                <label>计算机名：</label>
+                <input type="text" id='svr-update-hostname' class="easyui-validatebox" name='svr-update-hostname' data-options="valueField:'id', textField:'name', required:true">
             </div>
             <div class="svr-update-form-d">
                 <label>所在机房：</label>
